Create a new command line option --disable-gpu-process-for-dx12-vulkan-info-collection

This new command line option is created to disable the non-sandboxed
gpu process for collecting DX12/Vulkan information. Although this process only
exists for a very short period of time, it can sometimes interfere with the
layout test or the performance tests. With this option, those tests can run
without any interfering.

BUG=852796,856398

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I43582a15cd2451da9081111b79adec396c9acd4f
Reviewed-on: https://chromium-review.googlesource.com/1112463
Commit-Queue: Maggie Chen <magchen@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#570636}
Former-commit-id: c92718e66ebccd305fba542190cc242be5b7f44b