gpu/config/gpu_switches.h
@@ -20,7 +20,7 @@ GPU_EXPORT extern const char kShaderDiskCacheSizeKB[];
 GPU_EXPORT extern const char kUseGpuFencesForOverlayPlanes[];
 GPU_EXPORT extern const char kWebglAntialiasingMode[];
 GPU_EXPORT extern const char kWebglMSAASampleCount[];
-
+GPU_EXPORT extern const char kDisableGpuProcessForDX12VulkanInfoCollection[];
 }  // namespace switches
 
 #endif  // GPU_CONFIG_GPU_SWITCHES_H_
